Modified Application.properties File

--- a/Backend/bistroflow/src/main/resources/application.properties
+++ b/Backend/bistroflow/src/main/resources/application.properties
@@ -6,7 +6,11 @@ spring.application.name=bistroflow
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bistrotest
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/bistrotest
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=${SPRING_DATA_SOURCE_URL}
+spring.datasource.username=${MYSQL_DATABASE}
+spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 
